--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,12 @@ project(${APPNAME})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src/md5)
-link_directories(${CMAKE_CURRENT_SOURCE_DIR}/libs/linux )
+if (APPLE)
+    link_directories(/usr/local/Cellar/libexosip/5.1.1/lib)
+    link_directories(/usr/local/Cellar/libosip/5.1.1/lib)
+else()
+    link_directories(${CMAKE_CURRENT_SOURCE_DIR}/libs/linux )
+endif()
 
 aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/src DIR_SRCS)
 aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/src/md5 DIR_SRCS)
